--- a/CMS/CMS/CMS.csproj
+++ b/CMS/CMS/CMS.csproj
@@ -89,6 +89,9 @@
     <Compile Include="Views\SalesReturnPage.xaml.cs">
       <DependentUpon>SalesReturnPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ChangePasswordPage.xaml.cs">
+      <DependentUpon>ChangePasswordPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SimpleSalesInputPage.xaml.cs">
       <DependentUpon>SimpleSalesInputPage.xaml</DependentUpon>
     </Compile>
@@ -232,6 +235,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\SalesReturnPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ChangePasswordPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
