--- a/CMS/CMS.Droid/Properties/AndroidManifest.xml
+++ b/CMS/CMS.Droid/Properties/AndroidManifest.xml
@@ -6,5 +6,9 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
+  
 	<application android:label="CMS" android:icon="@drawable/cmslogo"></application>
+  <activity>
+    android:windowSoftInputMode="adjustResize|stateHidden"
+  </activity>
 </manifest>
