Fix bug logout back button

--- a/CMS/CMS.Droid/CMS.Droid.csproj
+++ b/CMS/CMS.Droid/CMS.Droid.csproj
@@ -64,7 +64,7 @@
     <EnableLLVM>False</EnableLLVM>
     <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
     <EnableProguard>False</EnableProguard>
-    <DebugSymbols>True</DebugSymbols>
+    <DebugSymbols>False</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Mobile.Core.Android.v16.1">
