--- a/CMS/CMS.Droid/Properties/AndroidManifest.xml
+++ b/CMS/CMS.Droid/Properties/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
   
 	<application android:label="CMS" android:icon="@drawable/cmslogo"></application>
-  <activity>
-    android:windowSoftInputMode="adjustResize|stateHidden"
+  <activity android:windowSoftInputMode="adjustResize|stateHidden"
+    android:noHistory="true">
   </activity>
 </manifest>
