--- a/CMS/CMS.Droid/Properties/AndroidManifest.xml
+++ b/CMS/CMS.Droid/Properties/AndroidManifest.xml
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0" package="CMS.Droid">
-	<uses-sdk android:minSdkVersion="15" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.FLASHLIGHT" />
-  
-	<application android:label="CMS" android:icon="@drawable/cmslogo"></application>
-  <activity android:windowSoftInputMode="adjustResize|stateHidden"
-    android:noHistory="true">
-  </activity>
+  <uses-sdk android:minSdkVersion="15" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.FLASHLIGHT" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <application android:label="CMS" android:icon="@drawable/cmslogo">
+    <activity
+      android:windowSoftInputMode="adjustResize|stateHidden"
+    android:noHistory="true"
+      android:name="test">
+    </activity>
+  </application>
 </manifest>
