--- a/CMS/CMS/CMS.csproj
+++ b/CMS/CMS/CMS.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Controls\BindablePicker.cs" />
     <Compile Include="Controls\CustomEntry.cs" />
     <Compile Include="Controls\CharacterLimit.cs" />
+    <Compile Include="DataSource\DSConnection.cs" />
     <Compile Include="DataSource\DSProfileSiteLink.cs" />
     <Compile Include="DataSource\DSSkuLink.cs" />
     <Compile Include="DataSource\DSSkuDetail.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="DataSource\DSBrand.cs" />
     <Compile Include="IServiceWrapper.cs" />
     <Compile Include="ISQLite.cs" />
+    <Compile Include="Models\Connection.cs" />
     <Compile Include="ViewModels\SalesComplexDetViewModel.cs" />
     <Compile Include="ViewModels\SalesComplexHeaderViewModel.cs" />
     <Compile Include="ViewModels\JSalesDetail.cs" />
@@ -87,6 +89,9 @@
     </Compile>
     <Compile Include="Views\MainViewSalesPage.xaml.cs">
       <DependentUpon>MainViewSalesPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ConnectionPage.xaml.cs">
+      <DependentUpon>ConnectionPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ViewSalesDetailPage.xaml.cs">
       <DependentUpon>ViewSalesDetailPage.xaml</DependentUpon>
@@ -353,6 +358,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ViewSalesDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ConnectionPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
